Updated settings for size

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,10 @@ edition = "2021"
 
 [dependencies]
 macroquad = "0.3"
+
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
